--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -576,8 +576,20 @@ video {
   top: calc(50% - 84px);
 }
 
+.tw-left-\[0px\] {
+  left: 0px;
+}
+
+.tw-top-\[7px\] {
+  top: 7px;
+}
+
 .tw-z-\[1\] {
   z-index: 1;
+}
+
+.tw-m-0 {
+  margin: 0px;
 }
 
 .tw-box-border {
@@ -620,6 +632,10 @@ video {
   height: 100%;
 }
 
+.tw-h-\[373px\] {
+  height: 373px;
+}
+
 .tw-min-h-\[25px\] {
   min-height: 25px;
 }
@@ -660,6 +676,18 @@ video {
   width: 100%;
 }
 
+.tw-w-\[1370px\] {
+  width: 1370px;
+}
+
+.tw-w-\[580px\] {
+  width: 580px;
+}
+
+.tw-w-\[590px\] {
+  width: 590px;
+}
+
 .tw-min-w-\[100px\] {
   min-width: 100px;
 }
@@ -698,6 +726,14 @@ video {
 
 .tw-min-w-\[70px\] {
   min-width: 70px;
+}
+
+.tw-min-w-\[409px\] {
+  min-width: 409px;
+}
+
+.tw-min-w-\[580px\] {
+  min-width: 580px;
 }
 
 .tw-max-w-full {
@@ -788,6 +824,14 @@ video {
   gap: 96px;
 }
 
+.tw-gap-\[69px\] {
+  gap: 69px;
+}
+
+.tw-gap-\[6px\] {
+  gap: 6px;
+}
+
 .tw-self-stretch {
   align-self: stretch;
 }
@@ -800,12 +844,16 @@ video {
   white-space: nowrap;
 }
 
+.tw-rounded-\[50\%\] {
+  border-radius: 50%;
+}
+
 .tw-rounded-lg {
   border-radius: 0.5rem;
 }
 
-.tw-rounded-\[50\%\] {
-  border-radius: 50%;
+.tw-rounded-xl {
+  border-radius: 20px;
 }
 
 .tw-border-\[0px\] {
@@ -816,14 +864,34 @@ video {
   border-style: solid;
 }
 
+.tw-border-gainsboro-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(224 216 205 / var(--tw-border-opacity));
+}
+
 .tw-bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.tw-bg-darkslategray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 54 47 / var(--tw-bg-opacity));
+}
+
+.tw-bg-gainsboro-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 216 205 / var(--tw-bg-opacity));
+}
+
 .tw-bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.tw-bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .tw-object-contain {
@@ -836,6 +904,11 @@ video {
      object-fit: cover;
 }
 
+.tw-px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .tw-px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
@@ -844,6 +917,11 @@ video {
 .tw-px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.tw-py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .tw-py-16 {
@@ -856,14 +934,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.tw-px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
+.tw-px-\[46px\] {
+  padding-left: 46px;
+  padding-right: 46px;
 }
 
-.tw-py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.tw-px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .tw-pb-0 {
@@ -890,6 +968,18 @@ video {
   padding-top: 46px;
 }
 
+.tw-pb-7 {
+  padding-bottom: 1.75rem;
+}
+
+.tw-pt-0 {
+  padding-top: 0px;
+}
+
+.tw-pt-\[21px\] {
+  padding-top: 21px;
+}
+
 .tw-text-left {
   text-align: left;
 }
@@ -898,26 +988,60 @@ video {
   text-align: right;
 }
 
+.tw-font-body-2-medium {
+  font-family: Inter;
+}
+
+.tw-font-spectral {
+  font-family: Spectral;
+}
+
+.tw-font-lato {
+  font-family: Lato;
+}
+
+.tw-text-3xs {
+  font-size: 10px;
+}
+
 .tw-text-9xl {
-  font-size: 8rem;
-  line-height: 1;
+  font-size: 28px;
+}
+
+.tw-text-mini-1 {
+  font-size: 14.1px;
 }
 
 .tw-text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 14px;
 }
 
-.tw-font-medium {
-  font-weight: 500;
+.tw-text-29xl {
+  font-size: 48px;
+}
+
+.tw-text-5xl {
+  font-size: 24px;
+}
+
+.tw-text-inherit {
+  font-size: inherit;
 }
 
 .tw-font-extrabold {
   font-weight: 800;
 }
 
+.tw-font-medium {
+  font-weight: 500;
+}
+
 .tw-font-semibold {
   font-weight: 600;
+}
+
+.tw-font-black {
+  font-weight: 900;
 }
 
 .tw-uppercase {
@@ -940,10 +1064,6 @@ video {
   line-height: 34px;
 }
 
-.tw-tracking-wide {
-  letter-spacing: 0.025em;
-}
-
 .tw-tracking-\[-0\.02em\] {
   letter-spacing: -0.02em;
 }
@@ -952,9 +1072,36 @@ video {
   letter-spacing: 0.04em;
 }
 
+.tw-tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tw-text-darkseagreen {
+  --tw-text-opacity: 1;
+  color: rgb(154 210 174 / var(--tw-text-opacity));
+}
+
+.tw-text-gainsboro-300 {
+  --tw-text-opacity: 1;
+  color: rgb(224 216 205 / var(--tw-text-opacity));
+}
+
+.tw-text-gray1-300 {
+  color: rgba(35, 41, 41, 0.5);
+}
+
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.tw-text-inherit {
+  color: inherit;
+}
+
+.tw-text-light-gray-11 {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .tw-transition-colors {
@@ -971,8 +1118,32 @@ video {
   transform: scale(2.45);
 }
 
-@media (min-width: 1024px) {
+.\[transform\:scale\(1\.038\)\] {
+  transform: scale(1.038);
+}
+
+@media (max-width: 1200px) {
+  .lg\:tw-box-border {
+    box-sizing: border-box;
+  }
+
+  .lg\:tw-flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .lg\:tw-flex-wrap {
+    flex-wrap: wrap;
+  }
+
   .lg\:tw-gap-\[64px_128px\] {
     gap: 64px 128px;
+  }
+
+  .lg\:tw-pl-\[23px\] {
+    padding-left: 23px;
+  }
+
+  .lg\:tw-pr-\[23px\] {
+    padding-right: 23px;
   }
 }
