--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -552,6 +552,10 @@ video {
   position: relative;
 }
 
+.tw-left-\[0px\] {
+  left: 0px;
+}
+
 .tw-left-\[210px\] {
   left: 210px;
 }
@@ -568,6 +572,10 @@ video {
   top: 60px;
 }
 
+.tw-top-\[7px\] {
+  top: 7px;
+}
+
 .tw-top-\[calc\(50\%_-_259\.5px\)\] {
   top: calc(50% - 259.5px);
 }
@@ -576,20 +584,86 @@ video {
   top: calc(50% - 84px);
 }
 
-.tw-left-\[0px\] {
-  left: 0px;
+.tw-bottom-\[-115px\] {
+  bottom: -115px;
 }
 
-.tw-top-\[7px\] {
-  top: 7px;
+.tw-bottom-\[-98px\] {
+  bottom: -98px;
+}
+
+.tw-left-\[162px\] {
+  left: 162px;
+}
+
+.tw-left-\[54px\] {
+  left: 54px;
+}
+
+.tw-left-\[58px\] {
+  left: 58px;
+}
+
+.tw-right-\[-73px\] {
+  right: -73px;
+}
+
+.tw-top-\[0px\] {
+  top: 0px;
+}
+
+.tw-top-\[142px\] {
+  top: 142px;
+}
+
+.tw-top-\[155px\] {
+  top: 155px;
+}
+
+.tw-top-\[39px\] {
+  top: 39px;
+}
+
+.tw-top-\[61px\] {
+  top: 61px;
+}
+
+.tw-bottom-\[0px\] {
+  bottom: 0px;
+}
+
+.tw-right-\[0px\] {
+  right: 0px;
 }
 
 .tw-z-\[1\] {
   z-index: 1;
 }
 
+.tw-z-\[2\] {
+  z-index: 2;
+}
+
 .tw-m-0 {
   margin: 0px;
+}
+
+.tw-mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tw-my-60 {
+  margin-top: 15rem;
+  margin-bottom: 15rem;
+}
+
+.tw-mt-56 {
+  margin-top: 14rem;
+}
+
+.tw-mr-5 {
+  margin-right: 1.25rem;
 }
 
 .tw-box-border {
@@ -602,6 +676,10 @@ video {
 
 .tw-flex {
   display: flex;
+}
+
+.tw-hidden {
+  display: none;
 }
 
 .tw-h-2 {
@@ -624,6 +702,10 @@ video {
   height: 312px;
 }
 
+.tw-h-\[373px\] {
+  height: 373px;
+}
+
 .tw-h-\[400px\] {
   height: 400px;
 }
@@ -632,12 +714,44 @@ video {
   height: 100%;
 }
 
-.tw-h-\[373px\] {
-  height: 373px;
+.tw-h-16 {
+  height: 4rem;
+}
+
+.tw-h-\[174px\] {
+  height: 174px;
+}
+
+.tw-h-\[197px\] {
+  height: 197px;
+}
+
+.tw-h-\[228px\] {
+  height: 228px;
+}
+
+.tw-h-\[289px\] {
+  height: 289px;
+}
+
+.tw-h-\[329px\] {
+  height: 329px;
+}
+
+.tw-h-12 {
+  height: 3rem;
+}
+
+.tw-max-h-full {
+  max-height: 100%;
 }
 
 .tw-min-h-\[25px\] {
   min-height: 25px;
+}
+
+.tw-min-h-\[329px\] {
+  min-height: 329px;
 }
 
 .tw-w-2 {
@@ -650,6 +764,10 @@ video {
 
 .tw-w-\[100px\] {
   width: 100px;
+}
+
+.tw-w-\[1370px\] {
+  width: 1370px;
 }
 
 .tw-w-\[254\.6px\] {
@@ -668,6 +786,14 @@ video {
   width: 400px;
 }
 
+.tw-w-\[580px\] {
+  width: 580px;
+}
+
+.tw-w-\[590px\] {
+  width: 590px;
+}
+
 .tw-w-\[81px\] {
   width: 81px;
 }
@@ -676,16 +802,56 @@ video {
   width: 100%;
 }
 
-.tw-w-\[1370px\] {
-  width: 1370px;
+.tw-w-16 {
+  width: 4rem;
 }
 
-.tw-w-\[580px\] {
-  width: 580px;
+.tw-w-44 {
+  width: 11rem;
 }
 
-.tw-w-\[590px\] {
-  width: 590px;
+.tw-w-\[1220px\] {
+  width: 1220px;
+}
+
+.tw-w-\[198px\] {
+  width: 198px;
+}
+
+.tw-w-\[243px\] {
+  width: 243px;
+}
+
+.tw-w-\[258px\] {
+  width: 258px;
+}
+
+.tw-w-\[316px\] {
+  width: 316px;
+}
+
+.tw-w-\[360px\] {
+  width: 360px;
+}
+
+.tw-w-\[122px\] {
+  width: 122px;
+}
+
+.tw-w-\[475px\] {
+  width: 475px;
+}
+
+.tw-w-\[275px\] {
+  width: 275px;
+}
+
+.tw-w-\[375px\] {
+  width: 375px;
+}
+
+.tw-w-\[75px\] {
+  width: 75px;
 }
 
 .tw-min-w-\[100px\] {
@@ -716,8 +882,16 @@ video {
   min-width: 26px;
 }
 
+.tw-min-w-\[409px\] {
+  min-width: 409px;
+}
+
 .tw-min-w-\[411px\] {
   min-width: 411px;
+}
+
+.tw-min-w-\[580px\] {
+  min-width: 580px;
 }
 
 .tw-min-w-\[63px\] {
@@ -728,12 +902,24 @@ video {
   min-width: 70px;
 }
 
-.tw-min-w-\[409px\] {
-  min-width: 409px;
+.tw-min-w-\[270px\] {
+  min-width: 270px;
 }
 
-.tw-min-w-\[580px\] {
-  min-width: 580px;
+.tw-min-w-\[54px\] {
+  min-width: 54px;
+}
+
+.tw-min-w-\[80px\] {
+  min-width: 80px;
+}
+
+.tw-min-w-\[370px\] {
+  min-width: 370px;
+}
+
+.tw-min-w-\[55px\] {
+  min-width: 55px;
 }
 
 .tw-max-w-full {
@@ -752,8 +938,20 @@ video {
   flex: 0.7078;
 }
 
+.tw-flex-\[0\.7556\] {
+  flex: 0.7556;
+}
+
+.tw-shrink-0 {
+  flex-shrink: 0;
+}
+
 .tw-transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-cursor-pointer {
+  cursor: pointer;
 }
 
 .tw-flex-row {
@@ -764,8 +962,16 @@ video {
   flex-direction: column;
 }
 
+.tw-flex-wrap {
+  flex-wrap: wrap;
+}
+
 .tw-items-start {
   align-items: flex-start;
+}
+
+.tw-items-end {
+  align-items: flex-end;
 }
 
 .tw-items-center {
@@ -800,6 +1006,10 @@ video {
   gap: 12px;
 }
 
+.tw-gap-\[148px\] {
+  gap: 148px;
+}
+
 .tw-gap-\[16px\] {
   gap: 16px;
 }
@@ -820,16 +1030,48 @@ video {
   gap: 5px;
 }
 
-.tw-gap-\[96px\] {
-  gap: 96px;
-}
-
 .tw-gap-\[69px\] {
   gap: 69px;
 }
 
 .tw-gap-\[6px\] {
   gap: 6px;
+}
+
+.tw-gap-\[96px\] {
+  gap: 96px;
+}
+
+.tw-gap-\[44px\] {
+  gap: 44px;
+}
+
+.tw-gap-\[19px\] {
+  gap: 19px;
+}
+
+.tw-gap-\[35px\] {
+  gap: 35px;
+}
+
+.tw-gap-\[39px\] {
+  gap: 39px;
+}
+
+.tw-gap-\[49px\] {
+  gap: 49px;
+}
+
+.tw-gap-\[70px\] {
+  gap: 70px;
+}
+
+.tw-gap-\[24\.5px\] {
+  gap: 24.5px;
+}
+
+.tw-gap-\[50px\] {
+  gap: 50px;
 }
 
 .tw-self-stretch {
@@ -856,8 +1098,24 @@ video {
   border-radius: 20px;
 }
 
+.tw-rounded-31xl {
+  border-radius: 50px;
+}
+
+.tw-rounded-3xs {
+  border-radius: 10px;
+}
+
+.tw-rounded-8xs {
+  border-radius: 5px;
+}
+
 .tw-border-\[0px\] {
   border-width: 0px;
+}
+
+.tw-border-\[1px\] {
+  border-width: 1px;
 }
 
 .tw-border-solid {
@@ -867,6 +1125,11 @@ video {
 .tw-border-gainsboro-300 {
   --tw-border-opacity: 1;
   border-color: rgb(224 216 205 / var(--tw-border-opacity));
+}
+
+.tw-border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .tw-bg-black {
@@ -889,9 +1152,32 @@ video {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
-.tw-bg-red-400 {
+.tw-bg-chestnut-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(123 120 91 / var(--tw-bg-opacity));
+}
+
+.tw-bg-gainsboro-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 216 206 / var(--tw-bg-opacity));
+}
+
+.tw-bg-whitesmoke-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 248 / var(--tw-bg-opacity));
+}
+
+.tw-bg-\[transparent\] {
+  background-color: transparent;
+}
+
+.tw-bg-darkslategray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 90 67 / var(--tw-bg-opacity));
+}
+
+.tw-bg-gainsboro-400 {
+  background-color: rgba(217, 217, 217, 0.03);
 }
 
 .tw-object-contain {
@@ -902,6 +1188,10 @@ video {
 .tw-object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.tw-p-0 {
+  padding: 0px;
 }
 
 .tw-px-0 {
@@ -919,6 +1209,16 @@ video {
   padding-right: 1.5rem;
 }
 
+.tw-px-\[46px\] {
+  padding-left: 46px;
+  padding-right: 46px;
+}
+
+.tw-px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .tw-py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -934,18 +1234,77 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.tw-px-\[46px\] {
-  padding-left: 46px;
-  padding-right: 46px;
+.tw-px-\[37px\] {
+  padding-left: 37px;
+  padding-right: 37px;
 }
 
-.tw-px-\[5px\] {
-  padding-left: 5px;
-  padding-right: 5px;
+.tw-py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.tw-py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.tw-px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
+}
+
+.tw-px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.tw-px-\[52px\] {
+  padding-left: 52px;
+  padding-right: 52px;
+}
+
+.tw-py-\[39px\] {
+  padding-top: 39px;
+  padding-bottom: 39px;
+}
+
+.tw-px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.tw-px-\[45px\] {
+  padding-left: 45px;
+  padding-right: 45px;
+}
+
+.tw-py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.tw-py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.tw-py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.tw-py-64 {
+  padding-top: 16rem;
+  padding-bottom: 16rem;
 }
 
 .tw-pb-0 {
   padding-bottom: 0px;
+}
+
+.tw-pb-7 {
+  padding-bottom: 1.75rem;
 }
 
 .tw-pl-0 {
@@ -964,20 +1323,68 @@ video {
   padding-right: 90px;
 }
 
-.tw-pt-\[46px\] {
-  padding-top: 46px;
-}
-
-.tw-pb-7 {
-  padding-bottom: 1.75rem;
-}
-
 .tw-pt-0 {
   padding-top: 0px;
 }
 
 .tw-pt-\[21px\] {
   padding-top: 21px;
+}
+
+.tw-pt-\[46px\] {
+  padding-top: 46px;
+}
+
+.tw-pb-\[5px\] {
+  padding-bottom: 5px;
+}
+
+.tw-pl-5 {
+  padding-left: 1.25rem;
+}
+
+.tw-pr-\[21px\] {
+  padding-right: 21px;
+}
+
+.tw-pt-28 {
+  padding-top: 7rem;
+}
+
+.tw-pt-24 {
+  padding-top: 6rem;
+}
+
+.tw-pb-24 {
+  padding-bottom: 6rem;
+}
+
+.tw-pb-\[98px\] {
+  padding-bottom: 98px;
+}
+
+.tw-pt-\[18px\] {
+  padding-top: 18px;
+}
+
+.tw-pt-\[58px\] {
+  padding-top: 58px;
+}
+
+.tw-pb-12 {
+  padding-bottom: 3rem;
+}
+
+.tw-pl-\[101px\] {
+  padding-left: 101px;
+}
+
+.tw-pr-\[100px\] {
+  padding-right: 100px;
+}
+
+.tw-pt-6 {
+  padding-top: 1.5rem;
 }
 
 .tw-text-left {
@@ -992,20 +1399,40 @@ video {
   font-family: Inter;
 }
 
+.tw-font-lato {
+  font-family: Lato;
+}
+
 .tw-font-spectral {
   font-family: Spectral;
 }
 
-.tw-font-lato {
-  font-family: Lato;
+.tw-font-body-medium {
+  font-family: Roboto;
+}
+
+.tw-font-raleway {
+  font-family: Raleway;
+}
+
+.tw-text-29xl {
+  font-size: 48px;
 }
 
 .tw-text-3xs {
   font-size: 10px;
 }
 
+.tw-text-5xl {
+  font-size: 24px;
+}
+
 .tw-text-9xl {
   font-size: 28px;
+}
+
+.tw-text-inherit {
+  font-size: inherit;
 }
 
 .tw-text-mini-1 {
@@ -1016,16 +1443,24 @@ video {
   font-size: 14px;
 }
 
-.tw-text-29xl {
-  font-size: 48px;
+.tw-text-17xl {
+  font-size: 36px;
 }
 
-.tw-text-5xl {
-  font-size: 24px;
+.tw-text-base {
+  font-size: 16px;
 }
 
-.tw-text-inherit {
-  font-size: inherit;
+.tw-text-xl {
+  font-size: 20px;
+}
+
+.tw-text-13xl {
+  font-size: 32px;
+}
+
+.tw-font-black {
+  font-weight: 900;
 }
 
 .tw-font-extrabold {
@@ -1040,8 +1475,12 @@ video {
   font-weight: 600;
 }
 
-.tw-font-black {
-  font-weight: 900;
+.tw-font-normal {
+  font-weight: 400;
+}
+
+.tw-font-bold {
+  font-weight: 700;
 }
 
 .tw-uppercase {
@@ -1064,12 +1503,20 @@ video {
   line-height: 34px;
 }
 
+.tw-leading-\[150\%\] {
+  line-height: 150%;
+}
+
 .tw-tracking-\[-0\.02em\] {
   letter-spacing: -0.02em;
 }
 
 .tw-tracking-\[0\.04em\] {
   letter-spacing: 0.04em;
+}
+
+.tw-tracking-\[normal\] {
+  letter-spacing: normal;
 }
 
 .tw-tracking-wide {
@@ -1090,11 +1537,6 @@ video {
   color: rgba(35, 41, 41, 0.5);
 }
 
-.tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .tw-text-inherit {
   color: inherit;
 }
@@ -1102,6 +1544,29 @@ video {
 .tw-text-light-gray-11 {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.tw-text-darkslategray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(40 90 67 / var(--tw-text-opacity));
+}
+
+.tw-text-gray1-200 {
+  color: rgba(18, 18, 18, 0.8);
+}
+
+.tw-text-gray1-100 {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.tw-text-red-50 {
+  --tw-text-opacity: 1;
+  color: rgb(254 242 242 / var(--tw-text-opacity));
 }
 
 .tw-transition-colors {
@@ -1114,12 +1579,12 @@ video {
   transition-duration: 300ms;
 }
 
-.\[transform\:scale\(2\.45\)\] {
-  transform: scale(2.45);
-}
-
 .\[transform\:scale\(1\.038\)\] {
   transform: scale(1.038);
+}
+
+.\[transform\:scale\(2\.45\)\] {
+  transform: scale(2.45);
 }
 
 @media (max-width: 1200px) {
