--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -556,12 +556,20 @@ video {
   bottom: -115px;
 }
 
+.tw-bottom-\[-147px\] {
+  bottom: -147px;
+}
+
 .tw-bottom-\[-98px\] {
   bottom: -98px;
 }
 
 .tw-bottom-\[0px\] {
   bottom: 0px;
+}
+
+.tw-left-\[-97px\] {
+  left: -97px;
 }
 
 .tw-left-\[0px\] {
@@ -594,6 +602,10 @@ video {
 
 .tw-right-\[-73px\] {
   right: -73px;
+}
+
+.tw-right-\[-96px\] {
+  right: -96px;
 }
 
 .tw-right-\[0px\] {
@@ -636,18 +648,6 @@ video {
   top: calc(50% - 84px);
 }
 
-.tw-bottom-\[-147px\] {
-  bottom: -147px;
-}
-
-.tw-left-\[-97px\] {
-  left: -97px;
-}
-
-.tw-right-\[-96px\] {
-  right: -96px;
-}
-
 .tw-z-\[1\] {
   z-index: 1;
 }
@@ -670,6 +670,21 @@ video {
   margin-bottom: 15rem;
 }
 
+.tw-my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.tw-my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.tw-my-\[20px\] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .tw-mt-\[-10px\] {
   margin-top: -10px;
 }
@@ -690,12 +705,20 @@ video {
   display: none;
 }
 
+.tw-h-14 {
+  height: 3.5rem;
+}
+
 .tw-h-16 {
   height: 4rem;
 }
 
 .tw-h-2 {
   height: 0.5rem;
+}
+
+.tw-h-28 {
+  height: 7rem;
 }
 
 .tw-h-6 {
@@ -718,6 +741,10 @@ video {
   height: 228px;
 }
 
+.tw-h-\[233px\] {
+  height: 233px;
+}
+
 .tw-h-\[25px\] {
   height: 25px;
 }
@@ -734,6 +761,10 @@ video {
   height: 329px;
 }
 
+.tw-h-\[349px\] {
+  height: 349px;
+}
+
 .tw-h-\[373px\] {
   height: 373px;
 }
@@ -746,62 +777,6 @@ video {
   height: 100%;
 }
 
-.tw-h-14 {
-  height: 3.5rem;
-}
-
-.tw-h-28 {
-  height: 7rem;
-}
-
-.tw-h-\[233px\] {
-  height: 233px;
-}
-
-.tw-h-\[349px\] {
-  height: 349px;
-}
-
-.tw-h-40 {
-  height: 10rem;
-}
-
-.tw-h-2\.5 {
-  height: 0.625rem;
-}
-
-.tw-h-5 {
-  height: 1.25rem;
-}
-
-.tw-h-8 {
-  height: 2rem;
-}
-
-.tw-h-\[13px\] {
-  height: 13px;
-}
-
-.tw-h-\[39px\] {
-  height: 39px;
-}
-
-.tw-h-\[41px\] {
-  height: 41px;
-}
-
-.tw-h-11 {
-  height: 2.75rem;
-}
-
-.tw-h-4 {
-  height: 1rem;
-}
-
-.tw-h-\[111px\] {
-  height: 111px;
-}
-
 .tw-max-h-full {
   max-height: 100%;
 }
@@ -812,22 +787,6 @@ video {
 
 .tw-min-h-\[329px\] {
   min-height: 329px;
-}
-
-.tw-min-h-\[177px\] {
-  min-height: 177px;
-}
-
-.tw-min-h-\[39px\] {
-  min-height: 39px;
-}
-
-.tw-min-h-\[41px\] {
-  min-height: 41px;
-}
-
-.tw-min-h-\[24px\] {
-  min-height: 24px;
 }
 
 .tw-w-16 {
@@ -858,8 +817,16 @@ video {
   width: 1370px;
 }
 
+.tw-w-\[170px\] {
+  width: 170px;
+}
+
 .tw-w-\[198px\] {
   width: 198px;
+}
+
+.tw-w-\[233px\] {
+  width: 233px;
 }
 
 .tw-w-\[243px\] {
@@ -898,6 +865,10 @@ video {
   width: 400px;
 }
 
+.tw-w-\[540px\] {
+  width: 540px;
+}
+
 .tw-w-\[580px\] {
   width: 580px;
 }
@@ -906,112 +877,16 @@ video {
   width: 590px;
 }
 
+.tw-w-\[730px\] {
+  width: 730px;
+}
+
 .tw-w-\[81px\] {
   width: 81px;
 }
 
 .tw-w-full {
   width: 100%;
-}
-
-.tw-w-\[170px\] {
-  width: 170px;
-}
-
-.tw-w-\[233px\] {
-  width: 233px;
-}
-
-.tw-w-\[540px\] {
-  width: 540px;
-}
-
-.tw-w-\[730px\] {
-  width: 730px;
-}
-
-.tw-w-0 {
-  width: 0px;
-}
-
-.tw-w-12 {
-  width: 3rem;
-}
-
-.tw-w-2\.5 {
-  width: 0.625rem;
-}
-
-.tw-w-3 {
-  width: 0.75rem;
-}
-
-.tw-w-32 {
-  width: 8rem;
-}
-
-.tw-w-7 {
-  width: 1.75rem;
-}
-
-.tw-w-\[13px\] {
-  width: 13px;
-}
-
-.tw-w-\[1440px\] {
-  width: 1440px;
-}
-
-.tw-w-\[182px\] {
-  width: 182px;
-}
-
-.tw-w-\[19px\] {
-  width: 19px;
-}
-
-.tw-w-\[21px\] {
-  width: 21px;
-}
-
-.tw-w-\[440px\] {
-  width: 440px;
-}
-
-.tw-w-\[49px\] {
-  width: 49px;
-}
-
-.tw-w-\[52px\] {
-  width: 52px;
-}
-
-.tw-w-\[53\.3px\] {
-  width: 53.3px;
-}
-
-.tw-w-\[69\.3px\] {
-  width: 69.3px;
-}
-
-.tw-w-px {
-  width: 1px;
-}
-
-.tw-w-4 {
-  width: 1rem;
-}
-
-.tw-w-5 {
-  width: 1.25rem;
-}
-
-.tw-w-\[363px\] {
-  width: 363px;
-}
-
-.tw-w-\[674px\] {
-  width: 674px;
 }
 
 .tw-min-w-\[100px\] {
@@ -1082,58 +957,6 @@ video {
   min-width: 80px;
 }
 
-.tw-min-w-\[12px\] {
-  min-width: 12px;
-}
-
-.tw-min-w-\[13px\] {
-  min-width: 13px;
-}
-
-.tw-min-w-\[21px\] {
-  min-width: 21px;
-}
-
-.tw-min-w-\[28px\] {
-  min-width: 28px;
-}
-
-.tw-min-w-\[33px\] {
-  min-width: 33px;
-}
-
-.tw-min-w-\[113px\] {
-  min-width: 113px;
-}
-
-.tw-min-w-\[199px\] {
-  min-width: 199px;
-}
-
-.tw-min-w-\[363px\] {
-  min-width: 363px;
-}
-
-.tw-min-w-\[36px\] {
-  min-width: 36px;
-}
-
-.tw-min-w-\[51px\] {
-  min-width: 51px;
-}
-
-.tw-min-w-\[52px\] {
-  min-width: 52px;
-}
-
-.tw-min-w-\[66px\] {
-  min-width: 66px;
-}
-
-.tw-min-w-\[674px\] {
-  min-width: 674px;
-}
-
 .tw-max-w-full {
   max-width: 100%;
 }
@@ -1156,10 +979,6 @@ video {
 
 .tw-shrink-0 {
   flex-shrink: 0;
-}
-
-.tw-flex-grow {
-  flex-grow: 1;
 }
 
 .tw-transform {
@@ -1266,8 +1085,16 @@ video {
   gap: 4px;
 }
 
+.tw-gap-\[56px\] {
+  gap: 56px;
+}
+
 .tw-gap-\[5px\] {
   gap: 5px;
+}
+
+.tw-gap-\[62px\] {
+  gap: 62px;
 }
 
 .tw-gap-\[69px\] {
@@ -1286,34 +1113,6 @@ video {
   gap: 96px;
 }
 
-.tw-gap-\[62px\] {
-  gap: 62px;
-}
-
-.tw-gap-\[22px\] {
-  gap: 22px;
-}
-
-.tw-gap-\[3px\] {
-  gap: 3px;
-}
-
-.tw-gap-\[8px\] {
-  gap: 8px;
-}
-
-.tw-gap-\[56px\] {
-  gap: 56px;
-}
-
-.tw-gap-\[24px\] {
-  gap: 24px;
-}
-
-.tw-gap-\[65px\] {
-  gap: 65px;
-}
-
 .tw-self-stretch {
   align-self: stretch;
 }
@@ -1322,12 +1121,12 @@ video {
   overflow: hidden;
 }
 
-.tw-overflow-x-auto {
-  overflow-x: auto;
-}
-
 .tw-whitespace-nowrap {
   white-space: nowrap;
+}
+
+.tw-rounded {
+  border-radius: 0.25rem;
 }
 
 .tw-rounded-31xl {
@@ -1354,14 +1153,6 @@ video {
   border-radius: 20px;
 }
 
-.tw-rounded {
-  border-radius: 0.25rem;
-}
-
-.tw-rounded-3xl {
-  border-radius: 1.5rem;
-}
-
 .tw-rounded-b-none {
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 0px;
@@ -1372,6 +1163,10 @@ video {
   border-top-right-radius: 80px;
 }
 
+.tw-border-\[0\.5px\] {
+  border-width: 0.5px;
+}
+
 .tw-border-\[0px\] {
   border-width: 0px;
 }
@@ -1380,12 +1175,13 @@ video {
   border-width: 1px;
 }
 
-.tw-border-\[0\.5px\] {
-  border-width: 0.5px;
-}
-
 .tw-border-solid {
   border-style: solid;
+}
+
+.tw-border-darkslategray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 89 64 / var(--tw-border-opacity));
 }
 
 .tw-border-gainsboro-300 {
@@ -1396,21 +1192,6 @@ video {
 .tw-border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.tw-border-darkslategray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(20 89 64 / var(--tw-border-opacity));
-}
-
-.tw-border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(208 213 221 / var(--tw-border-opacity));
-}
-
-.tw-bg-chestnut-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(123 120 91 / var(--tw-bg-opacity));
 }
 
 .tw-bg-darkslategray-200 {
@@ -1437,6 +1218,11 @@ video {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.tw-bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .tw-bg-whitesmoke-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 248 248 / var(--tw-bg-opacity));
@@ -1444,20 +1230,6 @@ video {
 
 .tw-bg-whitesmoke-200 {
   background-color: rgba(247, 248, 250, 0.8);
-}
-
-.tw-bg-chestnut-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
-}
-
-.tw-bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.tw-bg-\[transparent\] {
-  background-color: transparent;
 }
 
 .tw-object-contain {
@@ -1468,10 +1240,6 @@ video {
 .tw-object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.tw-p-0 {
-  padding: 0px;
 }
 
 .tw-px-0 {
@@ -1507,6 +1275,11 @@ video {
 .tw-px-\[37px\] {
   padding-left: 37px;
   padding-right: 37px;
+}
+
+.tw-px-\[43px\] {
+  padding-left: 43px;
+  padding-right: 43px;
 }
 
 .tw-px-\[45px\] {
@@ -1549,6 +1322,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.tw-py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .tw-py-64 {
   padding-top: 16rem;
   padding-bottom: 16rem;
@@ -1559,54 +1337,9 @@ video {
   padding-bottom: 39px;
 }
 
-.tw-px-\[43px\] {
-  padding-left: 43px;
-  padding-right: 43px;
-}
-
-.tw-px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.tw-px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-
-.tw-px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.tw-px-3\.5 {
-  padding-left: 0.875rem;
-  padding-right: 0.875rem;
-}
-
-.tw-py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.tw-px-\[100px\] {
-  padding-left: 100px;
-  padding-right: 100px;
-}
-
-.tw-px-\[13px\] {
-  padding-left: 13px;
-  padding-right: 13px;
-}
-
-.tw-px-\[75px\] {
-  padding-left: 75px;
-  padding-right: 75px;
-}
-
-.tw-py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
+.tw-py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .tw-pb-0 {
@@ -1625,6 +1358,14 @@ video {
   padding-bottom: 1.75rem;
 }
 
+.tw-pb-9 {
+  padding-bottom: 2.25rem;
+}
+
+.tw-pb-\[59px\] {
+  padding-bottom: 59px;
+}
+
 .tw-pb-\[98px\] {
   padding-bottom: 98px;
 }
@@ -1633,12 +1374,24 @@ video {
   padding-left: 0px;
 }
 
+.tw-pl-0\.5 {
+  padding-left: 0.125rem;
+}
+
 .tw-pl-5 {
   padding-left: 1.25rem;
 }
 
 .tw-pl-\[101px\] {
   padding-left: 101px;
+}
+
+.tw-pl-px {
+  padding-left: 1px;
+}
+
+.tw-pr-0 {
+  padding-right: 0px;
 }
 
 .tw-pr-\[100px\] {
@@ -1661,8 +1414,16 @@ video {
   padding-right: 90px;
 }
 
+.tw-pr-px {
+  padding-right: 1px;
+}
+
 .tw-pt-0 {
   padding-top: 0px;
+}
+
+.tw-pt-16 {
+  padding-top: 4rem;
 }
 
 .tw-pt-24 {
@@ -1681,60 +1442,16 @@ video {
   padding-top: 21px;
 }
 
+.tw-pt-\[30px\] {
+  padding-top: 30px;
+}
+
 .tw-pt-\[46px\] {
   padding-top: 46px;
 }
 
 .tw-pt-\[58px\] {
   padding-top: 58px;
-}
-
-.tw-pb-\[59px\] {
-  padding-bottom: 59px;
-}
-
-.tw-pl-0\.5 {
-  padding-left: 0.125rem;
-}
-
-.tw-pr-px {
-  padding-right: 1px;
-}
-
-.tw-pt-\[30px\] {
-  padding-top: 30px;
-}
-
-.tw-pb-9 {
-  padding-bottom: 2.25rem;
-}
-
-.tw-pl-px {
-  padding-left: 1px;
-}
-
-.tw-pr-0 {
-  padding-right: 0px;
-}
-
-.tw-pt-16 {
-  padding-top: 4rem;
-}
-
-.tw-pb-\[199px\] {
-  padding-bottom: 199px;
-}
-
-.tw-pr-\[3px\] {
-  padding-right: 3px;
-}
-
-.tw-pt-\[153px\] {
-  padding-top: 153px;
-}
-
-.tw-pt-\[271px\] {
-  padding-top: 271px;
 }
 
 .tw-text-left {
@@ -1765,24 +1482,12 @@ video {
   font-family: Raleway;
 }
 
-.tw-font-spectral {
-  font-family: Spectral;
-}
-
-.tw-font-poppins {
-  font-family: Poppins;
-}
-
 .tw-font-sans {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.tw-font-text-sm {
-  font-family: Jost;
-}
-
-.tw-font-orienta {
-  font-family: Orienta;
+.tw-font-spectral {
+  font-family: Spectral;
 }
 
 .tw-text-13xl {
@@ -1809,12 +1514,24 @@ video {
   font-size: 28px;
 }
 
+.tw-text-\[20\.6px\] {
+  font-size: 20.6px;
+}
+
+.tw-text-\[64px\] {
+  font-size: 64px;
+}
+
 .tw-text-base {
   font-size: 16px;
 }
 
 .tw-text-inherit {
   font-size: inherit;
+}
+
+.tw-text-lg {
+  font-size: 18px;
 }
 
 .tw-text-mini-1 {
@@ -1827,34 +1544,6 @@ video {
 
 .tw-text-xl {
   font-size: 20px;
-}
-
-.tw-text-\[20\.6px\] {
-  font-size: 20.6px;
-}
-
-.tw-text-lg {
-  font-size: 18px;
-}
-
-.tw-text-2xs {
-  font-size: 11px;
-}
-
-.tw-text-4xs {
-  font-size: 9px;
-}
-
-.tw-text-\[64px\] {
-  font-size: 64px;
-}
-
-.tw-text-11xl {
-  font-size: 30px;
-}
-
-.tw-text-77xl {
-  font-size: 96px;
 }
 
 .tw-font-black {
@@ -1873,12 +1562,12 @@ video {
   font-weight: 500;
 }
 
-.tw-font-semibold {
-  font-weight: 600;
-}
-
 .tw-font-normal {
   font-weight: 400;
+}
+
+.tw-font-semibold {
+  font-weight: 600;
 }
 
 .tw-uppercase {
@@ -1901,40 +1590,24 @@ video {
   line-height: 20px;
 }
 
-.tw-leading-\[34px\] {
-  line-height: 34px;
-}
-
 .tw-leading-\[25\.6px\] {
   line-height: 25.6px;
-}
-
-.tw-leading-\[57\.6px\] {
-  line-height: 57.6px;
-}
-
-.tw-leading-\[24px\] {
-  line-height: 24px;
-}
-
-.tw-leading-\[32px\] {
-  line-height: 32px;
-}
-
-.tw-leading-\[42px\] {
-  line-height: 42px;
 }
 
 .tw-leading-\[28px\] {
   line-height: 28px;
 }
 
-.tw-leading-\[88px\] {
-  line-height: 88px;
+.tw-leading-\[34px\] {
+  line-height: 34px;
 }
 
-.tw-leading-\[38px\] {
-  line-height: 38px;
+.tw-leading-\[57\.6px\] {
+  line-height: 57.6px;
+}
+
+.tw-leading-\[88px\] {
+  line-height: 88px;
 }
 
 .tw-tracking-\[-0\.02em\] {
@@ -1953,8 +1626,9 @@ video {
   letter-spacing: 0.025em;
 }
 
-.tw-tracking-\[0\.02em\] {
-  letter-spacing: 0.02em;
+.tw-text-chestnut-800 {
+  --tw-text-opacity: 1;
+  color: rgb(37 37 37 / var(--tw-text-opacity));
 }
 
 .tw-text-darkseagreen {
@@ -1965,6 +1639,11 @@ video {
 .tw-text-darkslategray-200 {
   --tw-text-opacity: 1;
   color: rgb(40 90 67 / var(--tw-text-opacity));
+}
+
+.tw-text-darkslategray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(20 89 64 / var(--tw-text-opacity));
 }
 
 .tw-text-gainsboro-300 {
@@ -2001,62 +1680,6 @@ video {
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.tw-text-darkslategray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(20 89 64 / var(--tw-text-opacity));
-}
-
-.tw-text-chestnut-600 {
-  --tw-text-opacity: 1;
-  color: rgb(123 120 91 / var(--tw-text-opacity));
-}
-
-.tw-text-chestnut-800 {
-  --tw-text-opacity: 1;
-  color: rgb(37 37 37 / var(--tw-text-opacity));
-}
-
-.tw-text-darkslategray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(41 54 47 / var(--tw-text-opacity));
-}
-
-.tw-text-gainsboro-200 {
-  --tw-text-opacity: 1;
-  color: rgb(224 216 206 / var(--tw-text-opacity));
-}
-
-.tw-text-grey-grey-500 {
-  --tw-text-opacity: 1;
-  color: rgb(102 112 133 / var(--tw-text-opacity));
-}
-
-.tw-text-grey-grey-700 {
-  --tw-text-opacity: 1;
-  color: rgb(72 80 94 / var(--tw-text-opacity));
-}
-
-.tw-text-grey-grey-800 {
-  --tw-text-opacity: 1;
-  color: rgb(56 62 73 / var(--tw-text-opacity));
-}
-
-.tw-text-lightgoldenrodyellow {
-  --tw-text-opacity: 1;
-  color: rgb(207 225 185 / var(--tw-text-opacity));
-}
-
-.tw-text-yellowgreen {
-  --tw-text-opacity: 1;
-  color: rgb(139 198 62 / var(--tw-text-opacity));
-}
-
-.tw-shadow-\[0px_1px_2px_rgba\(16\,_24\,_40\,_0\.05\)\] {
-  --tw-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  --tw-shadow-colored: 0px 1px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .tw-transition-colors {
