--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.tw-container {
+  width: 100%;
+}
+
 .tw-absolute {
   position: absolute;
 }
@@ -660,6 +664,14 @@ video {
   margin: 0px;
 }
 
+.tw--m-4 {
+  margin: -1rem;
+}
+
+.tw-m-4 {
+  margin: 1rem;
+}
+
 .tw-mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -674,6 +686,18 @@ video {
   margin-top: -10px;
 }
 
+.tw-mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.tw-mt-1 {
+  margin-top: 0.25rem;
+}
+
+.tw-mt-4 {
+  margin-top: 1rem;
+}
+
 .tw-box-border {
   box-sizing: border-box;
 }
@@ -684,6 +708,10 @@ video {
 
 .tw-flex {
   display: flex;
+}
+
+.tw-grid {
+  display: grid;
 }
 
 .tw-hidden {
@@ -708,6 +736,10 @@ video {
 
 .tw-h-6 {
   height: 1.5rem;
+}
+
+.tw-h-8 {
+  height: 2rem;
 }
 
 .tw-h-\[168\.6px\] {
@@ -762,6 +794,14 @@ video {
   height: 100%;
 }
 
+.tw-h-12 {
+  height: 3rem;
+}
+
+.tw-h-screen {
+  height: 100vh;
+}
+
 .tw-max-h-full {
   max-height: 100%;
 }
@@ -772,6 +812,10 @@ video {
 
 .tw-min-h-\[329px\] {
   min-height: 329px;
+}
+
+.tw-w-10 {
+  width: 2.5rem;
 }
 
 .tw-w-16 {
@@ -874,6 +918,18 @@ video {
   width: 100%;
 }
 
+.tw-w-12 {
+  width: 3rem;
+}
+
+.tw-w-1\/4 {
+  width: 25%;
+}
+
+.tw-w-1\/5 {
+  width: 20%;
+}
+
 .tw-min-w-\[100px\] {
   min-width: 100px;
 }
@@ -950,6 +1006,10 @@ video {
   max-width: 100%;
 }
 
+.tw-max-w-7xl {
+  max-width: 80rem;
+}
+
 .tw-flex-1 {
   flex: 1 1 0%;
 }
@@ -978,6 +1038,10 @@ video {
   cursor: pointer;
 }
 
+.tw-grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .tw-flex-row {
   flex-direction: row;
 }
@@ -1000,6 +1064,10 @@ video {
 
 .tw-items-center {
   align-items: center;
+}
+
+.tw-items-stretch {
+  align-items: stretch;
 }
 
 .tw-justify-start {
@@ -1102,12 +1170,22 @@ video {
   gap: 96px;
 }
 
+.tw-gap-5 {
+  gap: 1.25rem;
+}
+
 .tw-self-stretch {
   align-self: stretch;
 }
 
 .tw-overflow-hidden {
   overflow: hidden;
+}
+
+.tw-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .tw-whitespace-nowrap {
@@ -1151,6 +1229,16 @@ video {
   border-bottom-left-radius: 0px;
 }
 
+.tw-rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.tw-rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
 .tw-rounded-t-61xl {
   border-top-left-radius: 80px;
   border-top-right-radius: 80px;
@@ -1166,6 +1254,10 @@ video {
 
 .tw-border-\[1px\] {
   border-width: 1px;
+}
+
+.tw-border-2 {
+  border-width: 2px;
 }
 
 .tw-border-solid {
@@ -1189,6 +1281,16 @@ video {
 .tw-border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.tw-border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.tw-border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .tw-bg-darkslategray-200 {
@@ -1234,6 +1336,16 @@ video {
   background-color: rgba(247, 248, 250, 0.8);
 }
 
+.tw-bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.tw-bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .tw-object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -1242,6 +1354,10 @@ video {
 .tw-object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.tw-p-4 {
+  padding: 1rem;
 }
 
 .tw-px-0 {
@@ -1262,6 +1378,11 @@ video {
 .tw-px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.tw-px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .tw-px-5 {
@@ -1314,6 +1435,11 @@ video {
   padding-bottom: 0px;
 }
 
+.tw-py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .tw-py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -1342,6 +1468,26 @@ video {
 .tw-py-\[39px\] {
   padding-top: 39px;
   padding-bottom: 39px;
+}
+
+.tw-py-\[50px\] {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.tw-py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.tw-py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.tw-py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .tw-pb-0 {
@@ -1548,6 +1694,14 @@ video {
   font-size: 20px;
 }
 
+.tw-text-xs {
+  font-size: 12px;
+}
+
+.tw-text-3xl {
+  font-size: 22px;
+}
+
 .tw-font-black {
   font-weight: 900;
 }
@@ -1612,6 +1766,18 @@ video {
   line-height: 88px;
 }
 
+.tw-leading-relaxed {
+  line-height: 1.625;
+}
+
+.tw-leading-5 {
+  line-height: 1.25rem;
+}
+
+.tw-leading-9 {
+  line-height: 2.25rem;
+}
+
 .tw-tracking-\[-0\.02em\] {
   letter-spacing: -0.02em;
 }
@@ -1630,6 +1796,10 @@ video {
 
 .tw-tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.tw-tracking-tight {
+  letter-spacing: -0.025em;
 }
 
 .tw-text-chestnut-800 {
@@ -1655,6 +1825,11 @@ video {
 .tw-text-gainsboro-300 {
   --tw-text-opacity: 1;
   color: rgb(224 216 205 / var(--tw-text-opacity));
+}
+
+.tw-text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .tw-text-gray1-100 {
@@ -1693,6 +1868,45 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.tw-text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.tw-text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.tw-text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+
+.tw-text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.tw-text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+
+.tw-shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.tw-transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .tw-transition-colors {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1701,6 +1915,10 @@ video {
 
 .tw-duration-300 {
   transition-duration: 300ms;
+}
+
+.tw-duration-500 {
+  transition-duration: 500ms;
 }
 
 .\[transform\:scale\(1\.038\)\] {
